@@ -1,16 +1,13 @@
 package com.daimainardi.workshopmongo.resource;
 
-import com.daimainardi.workshopmongo.domain.User;
 import com.daimainardi.workshopmongo.dto.UserDTO;
 import com.daimainardi.workshopmongo.service.UserService;
-import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping(value = "/users")
@@ -22,9 +19,12 @@ public class UserResource {
     }
 
     @GetMapping
-    public ResponseEntity<List<UserDTO>> findAll(){
-        List<User> list = userService.findAll();
-        List<UserDTO> userDTOList = list.stream().map(x -> new UserDTO(x)).collect(Collectors.toList());
-        return ResponseEntity.ok().body(userDTOList);
+    public List<UserDTO> findAll(){
+        return userService.findAll().stream().map(UserDTO::new).toList();
     }
+    @GetMapping(value = "/{id}")
+    public UserDTO findById(@PathVariable String id){
+        return new UserDTO(userService.findById(id));
+    }
+
 }
